Fixes prettyForm to not allow line break in value name

--- a/ci/web/front/src/prettyElements/prettyForm.less
+++ b/ci/web/front/src/prettyElements/prettyForm.less
@@ -24,6 +24,7 @@
 			padding-right: 15px;
 			color: @koalityGray;
 			text-align: left;
+			white-space: nowrap;
 			padding-bottom: @bottomPadding;
 
 			&.labelPadding {
