--- a/ci/web/front/src/repository/repository.less
+++ b/ci/web/front/src/repository/repository.less
@@ -182,6 +182,7 @@
 			z-index: 3;
 			top: 30px;
 			left: 30px;
+			right: 30px;
 		}
 
 		#repositoryStageDetailsMerge {
